# ZeneAudio

./: .gitignore  README.md
src/: Audio.csproj  AudioDevice.cs  AudioReader.cs  AudioSystem.cs  Backend.cs  Devices.cs  IAudioDevice.cs  IAudioEffect.cs  IAudioPipeline.cs  IAudioSource.cs  IAudioSystem.cs  Initialiser.cs  Pipeline.cs  Program.cs  Sample.cs  src.csproj
src/AudioBackend/: CMakeLists.txt  alsaSystem.cpp  linuxTest.cpp  main.cpp  readBuffer.cpp  readBuffer.h  system.h  wasapiSystem.cpp
src/Basic/: LPFilter.cs  Oscillator.cs
test/: Program.cs  test.csproj
